Pages can be opened, phase one tasks complete

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title><%= title %></title>
+    <title><%= typeof title !== 'undefined' ? title : 'Recipe Sharing Platform' %></title>
     <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
-    <h1><%= title %></h1>
+    <h1><%= typeof title !== 'undefined' ? title : 'Recipe Sharing Platform' %></h1>
     <p>Welcome to the Recipe Sharing Platform!</p>
 
     <h2>Navigation</h2>
