Updated recipes.js and recipe-form.ejs
Added some comments for readability for recipes.js and changes the image_url field type to text for testing.

--- a/views/recipe-form.ejs
+++ b/views/recipe-form.ejs
@@ -40,7 +40,7 @@
 		</div>
 		<div>
 			<label>Image URL</label><br />
-			<input type="url" name="image_url" value="<%= values?.image_url || '' %>" />
+			<input type="text" name="image_url" value="<%= values?.image_url || '' %>" />
 		</div>
 		<p><button type="submit">Save Recipe</button></p>
 	</form>
