--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,26 +4,41 @@
   <meta charset="UTF-8" />
   <title>Login</title>
   <link rel="stylesheet" href="/styles.css" />
-  <style>.form { max-width: 420px; }</style>
-  </head>
+  <link rel="stylesheet" href="/css/form.css" />
+</head>
+
 <body>
+
+<div class="form-container">
+
   <h1>Login</h1>
-  <p><button onclick="window.location.href='/'">Home</button> <button onclick="window.location.href='/users/signup'">Sign up</button></p>
+
+  <p style="text-align:center">
+    <button onclick="window.location.href='/'">Home</button>
+    <button onclick="window.location.href='/users/signup'">Sign up</button>
+  </p>
 
   <% if (error) { %>
-    <p style="color:#b00"><%= error %></p>
+    <p class="error-message"><%= error %></p>
   <% } %>
 
-  <form class="form" action="/users/login" method="POST">
+  <form action="/users/login" method="POST">
     <div>
-      <label>Username</label><br />
+      <label>Username</label>
       <input type="text" name="username" value="<%= values?.username || '' %>" required />
     </div>
+
     <div>
-      <label>Password</label><br />
+      <label>Password</label>
       <input type="password" name="password" required />
     </div>
-    <p><button type="submit">Login</button></p>
+
+    <div class="form-actions">
+      <button type="submit">Login</button>
+    </div>
   </form>
+
+</div>
+
 </body>
 </html>
