--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -111,7 +111,7 @@
 				<p class="muted">
 					<% if (r.cuisine) { %>Cuisine: <%= r.cuisine %> • <% } %>
 					<% if (r.difficulty) { %>Difficulty: <%= r.difficulty %> • <% } %>
-					<% if (r.cook_time) { %>Time: <%= r.cook_time %> mins<% } %>
+					<% if (r.cook_time) { %>Time: <%= r.cook_time %><% } %>
 				</p>
 
                 <p class="muted">
