--- a/views/recipe-form.ejs
+++ b/views/recipe-form.ejs
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<title>New Recipe</title>
 	<link rel="stylesheet" href="/styles.css" />
-	<link rel="stylesheet" href="/css/form.css" />
+	<link rel="stylesheet" href="/css/recipe-form.css" />
 </head>
 
 <body>
